--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "fetch-cookie": "^3.0.1",
+    "firebase": "^10.13.2",
+    "html-react-parser": "^5.1.16",
     "next": "14.2.13",
     "node-fetch": "^3.3.2",
     "node-fetch-cookies": "^2.1.1",
