--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "fetch-cookie": "^3.0.1",
     "firebase": "^10.13.2",
+    "history": "^5.3.0",
     "html-react-parser": "^5.1.16",
     "next": "14.2.13",
     "node-fetch": "^3.3.2",
@@ -21,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.2",
     "tough-cookie": "^5.0.0"
   },
