--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.2",
-    "tough-cookie": "^5.0.0"
+    "tough-cookie": "^5.0.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
