--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "fetch-cookie": "^3.0.1",
